Added swagger UI JSON files
